Fix Overflow Scroll bugs

--- a/src/App.css
+++ b/src/App.css
@@ -154,8 +154,11 @@ button:focus {
     background: url("../public/wallpaper.jpg");
     background-size: cover;
     background-position: center center;
+    background-attachment: fixed;
+
     width: 100%;
     height: 100vh;
-
     position: relative;
+
+    overflow: scroll;
 }
